# OpenDeepResearcher-Agentic-LLM-Research-Framework

./: .env  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  LICENSE.md  OpenDeepResearcher document archana.docx  OpenDeepResearcher_Final.pptx  PKG-INFO  README.md  SOURCES.txt  __init__.py  agents.py  app.py  chat_history.json  chats.json  config.py  flow.py  initial.py  latest.json  llm.py  main.py  memory.py  planner.py  prompts.py  pyproject.toml  pyvenv.cfg  readme.md  requirements.txt  requriments.txt  researcher.py  search.py  searcher.py  test_llm.py  test_pipeline.py  test_rag.py  test_tavily.py  ui.py  workflow.py  writer.py
MILESTONE 3/: ARCHITECTURE_GUIDE.py  pipeline.py  requirements.txt
MILESTONE 3/agents/: searcher.py
MILESTONE 4/: QUICKSTART.py  README.md  rag.py  streamlit_app.py  streamlit_sessions.json  test_llm.py
MileStone_1/: main.py
MileStone_3/: app.py
MileStone_4/: OpenDeepResearcher_Documentation.docx  app.py
Milestone 1/: README.md
Milestone_2/: .env
OpenDeepResearcher/: README.md  main.py  requriments.txt
OpenDeepResearcher Agentic LLM Research Framework/: .env  main.py  requirements.txt  ui.py
UI/: app.py
agent/: planner.py  searcher.py  writer.py
agents/: __init__.py  planner.py  searcher.py  writer.py
config/: __init__.py
data/: chats.json
graph/: pipeline.py
infosys/: .env.example  README.md  pyproject.toml
milestone2/: main.py  planner.py  requirements.txt  research_data.json  researcher.py  writer.py
milestone3/: readme.md
opensearch/: planner.py  searcher.py  writer.py
utils/: pdf_export.py
(+39 files in other folders)
